--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --font-sans: 'Inter', sans-serif;
   --font-serif: 'Fira Code', monospace;
   --color-primary: #031625;
-  --color-secondary: #0e172a;
+  --color-secondary: #0f192c;
   --color-accent: #4ddeb7;
   --nav-height: 91px;
 
@@ -41,7 +41,11 @@ body {
     @apply transition-all duration-300 ease-in-out;
   }
 
-  .section-res {
-    @apply mx-32 max-md:mx-8;
+  .section {
+    @apply py-24 max-md:py-16;
+  }
+
+  .section-container {
+    @apply container mx-auto px-4 sm:px-6 lg:px-8;
   }
 }
